k8s/manifests/helm-repo/helm-repo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-repo
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: helm-repo
  template:
    metadata:
      labels:
        app: helm-repo
    spec:
      containers:
        - name: helm-repo
          image: nginx:latest
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
              readOnly: true
            - name: helm-repo-data
              mountPath: /www/data
      volumes:
        - name: nginx-conf
          configMap:
            name: helm-repo-nginx-conf
            optional: false
        - name: helm-repo-data
          persistentVolumeClaim:
            claimName: helm-repo-data
---
apiVersion: v1
kind: Service
metadata:
  name: helm-repo
spec:
  selector:
    app: helm-repo
  ports:
    - port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helm-repo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-gateway
  hostnames:
    - charts.o.cavnet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: helm-repo
          port: 80
